add adatlap + insert

--- a/WFA211108/WFA211108.csproj
+++ b/WFA211108/WFA211108.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmAdatlap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmAdatlap.Designer.cs">
+      <DependentUpon>FrmAdatlap.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FrmAdatlap.resx">
+      <DependentUpon>FrmAdatlap.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </EmbeddedResource>
